--- a/assets/css/nav.css
+++ b/assets/css/nav.css
@@ -1,14 +1,80 @@
-#menu-menu-topo-site {
-    display: flex;
-    gap: 1rem;
-
-    list-style: none;
-    padding: 0;
+header {
+    margin-bottom: 5rem;
+    box-shadow: 0 6px 12px rgba(0, 0, 0, .175);
 }
 
-#menu-menu-topo-site li a {
+/*
+* Menu top red
+*/
+.top-menu-red {
+    background: linear-gradient(60deg, #de3a3a, #d44e4e);
+    width: 100%;
+    padding: 1rem 0;
+    height: auto;
+}
+
+.top-menu-red .container .row div p {
+    color: #fff;
+    font-size: 1.5rem;
+}
+
+.top-menu-red .menu-menu-top-red-container {
+    display: flex;
+}
+
+.top-menu-red .menu-menu-top-red-container ul {
+    list-style: none;
+    margin-bottom: 0px;
+    padding-left: 0;
+}
+
+.top-menu-red .menu-menu-top-red-container ul li a {
     text-decoration: none;
-    color: #000;
-    font-size: 1.235rem;
+    color: #fff;
+    font-size: 1.5rem;
     font-weight: 500;
+}
+
+/*
+* Top menu white
+*/
+.top-menu-white {
+    background: linear-gradient(60deg, #fff, #fffe);
+    width: 100%;
+    height: auto;
+    padding: 2rem 0;
+}
+
+.menu-top-menu-white-container {
+    display: flex;
+}
+
+.top-menu-white .menu-top-menu-white-container ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 1.5rem;
+}
+
+.top-menu-white .menu-top-menu-white-container ul li a {
+    text-transform: uppercase;
+    text-decoration: none;
+    color: #333;
+}
+
+.top-menu-white .menu-top-menu-white-container ul li a:hover {
+    color: #ff0000;
+    font-weight: 600;
+}
+
+.top-menu-white .menu-top-menu-white-container ul li a.menuAtivo {
+    color: #ff0000;
+}
+
+.top-menu-white .menu-top-menu-white-container ul li ul.sub-menu {
+    display: none;
 }
